updated resume, fixed problems on Safari, fixed display box overflow

--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ html{
 
 body{
     margin: 0;
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
 }
 
 footer{
@@ -183,7 +178,11 @@ footer{
 }
 
 #app{
-    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 @font-face {
@@ -351,7 +350,7 @@ ul, ol{
 
 .general_iframe{
     width: 100%;
-    height: 900px;
+    height: 600px;
 }
 
 .button_bar{
